v0.4.0

* Add --changes option to print change history

v0.3.0

* Search & Replace processing functions can now mark finds with color on ANSI color-compatible terminals
* Search & Replace processing functions now use a single parameter 'marker' to indicate finds
  (defaults to green or <<< >>>)

v0.2.0

* Add CountWordOccurence
* Rename CountAlphabet to CountCharacterOccurence
* Add ExtractColumn
* Rename RemoveCharacters to TrimLine
* Add RemoveCharacters
* Add FlipUpsideDown
* Add SpacesToTabs / TabsToSpaces