@@ -76,7 +76,7 @@ OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 PERFORMANCE OF THIS SOFTWARE.
 %%%
 -eSearchRegex
--p\bOR
+-p\\bOR
 -p|
 %
 %1
@@ -97,7 +97,7 @@ PERFORMANCE OF THIS SOFTWARE.
 %%%
 -i
 -eSearchRegex
--p\bOR
+-p\\bOR
 -p|
 %
 %1
@@ -117,8 +117,8 @@ OTHER TORTIOUS ACTION, ARISING OUT OF |OR| IN CONNECTION WITH THE USE |OR|
 PERFORMANCE OF THIS SOFTWARE.
 %%%
 -eReplaceRegex
--p<(\/?)(\d+?)>
--p<\1lane\2>
+-p<(\\/?)(\\d+?)>
+-p<$1lane$2>
 -p\0
 %
 <road>
